@@ -133,74 +133,19 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<release>${java.version}</release>
+					<target>${java.version}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${org.mapstruct.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
-				<dependencies>
-					<dependency>
-						<!-- update compiler plugin dependency on ASM for Java 11 compatibility -->
-						<groupId>org.ow2.asm</groupId>
-						<artifactId>asm</artifactId>
-						<version>6.2</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
-				</configuration>
+				
 			</plugin>
 
-
-			<plugin>
-				<groupId>org.bsc.maven</groupId>
-				<artifactId>maven-processor-plugin</artifactId>
-				<version>3.3.3</version>
-				<executions>
-					<execution>
-						<id>process</id>
-						<goals>
-							<goal>process</goal>
-						</goals>
-						<phase>generate-sources</phase>
-						<configuration>
-							<processors>
-								<!-- list of processors to use -->
-								<processor>org.mapstruct.ap.MappingProcessor</processor>
-							</processors>
-							<outputDirectory>${basedir}/target/generated-sources-mappers</outputDirectory>
-							<compilerArguments>-source 11 -target 11</compilerArguments>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-resources-plugin</artifactId> 
-				<executions> <execution> <id>copy-scripts</id> -->
-			<!-- install phase so the jar has been made -->
-			<!-- <phase>package</phase> <goals> <goal>copy-resources</goal> </goals> 
-				<configuration> <outputDirectory>${basedir}/target/</outputDirectory> <resources> 
-				<resource> <directory>src/main/resources</directory> <filtering>true</filtering> 
-				<includes> <include>application*</include> </includes> </resource> </resources> 
-				</configuration> </execution> </executions> </plugin> -->
-
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-assembly-plugin</artifactId> 
-				<configuration> <descriptors> <descriptor>assembly/assembly.xml</descriptor> 
-				</descriptors> </configuration> <executions> <execution> <id>trigger-assembly</id> 
-				<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> 
-				</executions> </plugin> -->
-
-
+			
 		</plugins>
 	</build>
 
